--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/song_widget_info"/>
         </receiver>
+
+        <activity android:name=".MyProfile">
+        </activity>
     </application>
 
 </manifest>
