--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword 'password'
-            storeFile file('C:/Users/Patrick Coyne/Documents/BetaThetaPi/keystore.jks')
+            storeFile file('keystore.jks')
             storePassword 'password'
         }
     }
