Added service for playing songs from widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
 
         <activity android:name=".MyProfile">
         </activity>
+
+        <service android:name=".SongService"
+                 android:exported="false"/>
     </application>
 
 </manifest>
