--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.2.0'
     compile 'com.google.firebase:firebase-messaging:11.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:support-v4:26.+'
-    compile 'com.android.support:support-vector-drawable:26.+'
+    compile 'com.android.support:support-v4:26.0.0'
+    compile 'com.android.support:support-vector-drawable:26.0.0'
     compile 'com.firebase:firebase-jobdispatcher:0.8.0'
     testCompile 'junit:junit:4.12'
 }
